--- a/src/app/features/category/components/filters/filters.component.html
+++ b/src/app/features/category/components/filters/filters.component.html
@@ -48,10 +48,20 @@
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          Ubiación
+          Ubicación
         </button>
         <ul class="dropdown-menu">
-          <li *ngFor="let commune of communesData">
+          <li>
+            <input
+              class="form-control my-input"
+              type="search"
+              placeholder="Buscar"
+              [(ngModel)]="selectedComune"
+              (input)="filterUsers()"
+            />
+          </li>
+
+          <li *ngFor="let commune of filterOptions">
             <a class="dropdown-item" (click)="clickCommune(commune)">{{
               commune.name
             }}</a>
