--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,11 +1,18 @@
 <footer class="container-fluid">
-    <div class="d-flex flex-wrap flex-row justify-content-between" id="footer-row">
-        <div id="image-container"> 
-            <img src="assets/images/medx (8).png" alt="Logo">
-        </div>
-        <div id="icon-container" class="align-self-center justify-content-evenly">
-            <a href="https://www.instagram.com/medxapp_cl/"><fa-icon [icon]="instaIcon"></fa-icon></a>
-            <a href="#"><fa-icon [icon]="mailIcon"></fa-icon></a>
-        </div>
+  <div
+    class="d-flex flex-wrap flex-row justify-content-between"
+    id="footer-row"
+  >
+    <div id="image-container">
+      <img src="assets/images/medx (8).png" alt="Logo" />
     </div>
+    <div id="icon-container" class="align-self-center justify-content-evenly">
+      <a href="https://www.instagram.com/medxapp_cl/"
+        ><fa-icon [icon]="instaIcon"></fa-icon
+      ></a>
+      <a href="mailto:medx.inbox@gmail.com"
+        ><fa-icon [icon]="mailIcon"></fa-icon
+      ></a>
+    </div>
+  </div>
 </footer>
