--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,15 +4,15 @@
       <img src="assets/images/medx (8).png" alt="Logo" class="img-fluid" />
     </div>
     <div class="col-lg-4 col-sm-12">
-      <a routerLink="home" class="m-1 py-2 px-4">Home</a>
-      <a routerLink="about" class="m-1 py-2 px-4">About</a>
+      <a routerLink="home" class="m-1 py-2 px-4">Inicio</a>
+      <a routerLink="about" class="m-1 py-2 px-4">Quienes Somos</a>
       <a routerLink="contact" class="m-1 py-2 px-4">Contacto</a>
-    </div>  
+    </div>
   </div>
 </div>
 
-  <!-- <div class="col-4"></div> -->
-    <!-- <div class="col-4" *ngIf="!state">
+<!-- <div class="col-4"></div> -->
+<!-- <div class="col-4" *ngIf="!state">
       <a routerLink="/register"
         ><button class="m-3 border no-border" id="register">
           Registro <fa-icon [icon]="regIcon"></fa-icon></button
