--- a/src/app/features/category/components/filters/filters.component.css
+++ b/src/app/features/category/components/filters/filters.component.css
@@ -39,3 +39,18 @@ button:hover{
 ::-webkit-scrollbar-thumb:hover {
     background: var(--yellow); 
 }
+
+.my-input {
+    background-image: url('https://www.w3schools.com/howto/searchicon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: transparent;
+    border-bottom: 1px solid #ddd;
+ }
+
+ .form-control:focus {
+    outline: none !important;
+    box-shadow: none !important;
+  }  
