arreglos en responsividad pantallas pequeñas, navbar, contacto, doc-profile

--- a/src/app/features/about/views/about.component.html
+++ b/src/app/features/about/views/about.component.html
@@ -9,7 +9,7 @@
 
 <div class="container mb-5 p-5" id="container">
   <div class="row justify-content-center text-center">
-    <h1>SOBRE MEDX</h1>
+    <h1>Bienvenid@s a MEDX</h1>
     <h3>
       Encuentra profesionales de salud de manera fácil y rápida con nuestra StartUp.
     </h3>
