--- a/src/app/features/contact/views/contact.component.html
+++ b/src/app/features/contact/views/contact.component.html
@@ -7,9 +7,9 @@
     </nav>
 </div> -->
 
-<div class="container-fluid mb-5 rounded p-5" id="container">
+<div class="container-fluid container-sm mb-5 rounded" id="container">
   <div class="row text-center">
-    <h1>Contactanos</h1>
+    <h1>Contáctanos</h1>
   </div>
   <div class="row p-5">
     <div class="col-lg-3 col-sm-10 p-3">
@@ -19,22 +19,22 @@
       </h4>
       <div class="d-flex flex-column mt-4">
         <h5 class="m-0">Registro</h5>
-        <p class="m-0 mt-2">+56 9 4850 5395</p>
-        <p class="m-0 mt-1">registro@medx.cl</p>
-        <p class="m-0 mt-1">Lunes a Viernes 09:00 - 18:00</p>
+        <p class="m-0 mt-2 text-break">+56 9 4850 5395</p>
+        <p class="m-0 mt-1 text-break">registro@medxapp.cl</p>
+        <p class="m-0 mt-1 text-break">Lunes a Viernes 09:00 - 18:00</p>
       </div>
       <div class="d-flex flex-column mt-4">
         <h5 class="m-0">Administración</h5>
-        <p class="m-0 mt-2">+56 9 4850 5395</p>
-        <p class="m-0 mt-1">administracion@medx.cl</p>
-        <p class="m-0 mt-1">Lunes a Viernes 09:00 - 18:00</p>
+        <p class="m-0 mt-2 text-break">+56 9 4850 5395</p>
+        <p class="m-0 mt-1 text-break">administracion@medxapp.cl</p>
+        <p class="m-0 mt-1 text-break">Lunes a Viernes 09:00 - 18:00</p>
       </div>
     </div>
-    <div class="col-lg-9 col-sm-12 p-5 shadow" id="yellow-bg">
+    <div class="col-lg-9 col-sm-12 shadow" id="yellow-bg">
       <form [formGroup]="contactForm" (ngSubmit)="onSubmitContact()">
         <div class="row">
           <h3>Escríbenos</h3>
-          <p id="subtitle">
+          <p id="subtitle" class="text-break">
             Tus comentarios son muy importantes para nosotros!
           </p>
           <div class="col-lg-6 col-sm-12 p-3">
@@ -48,7 +48,7 @@
               />
             </div>
             <div class="mb-3">
-              <label for="numberInput" class="form-label">Telefono</label>
+              <label for="numberInput" class="form-label">Teléfono</label>
               <input
                 type="text"
                 class="form-control"
