--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-lg-4 col-sm-12">
       <a routerLink="home" class="m-1 py-2 px-4">Inicio</a>
-      <a routerLink="about" class="m-1 py-2 px-4">Quienes Somos</a>
+      <a routerLink="about" class="m-1 py-2 px-4 text-nowrap">Sobre Medx</a>
       <a routerLink="contact" class="m-1 py-2 px-4">Contacto</a>
     </div>
   </div>
