--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.css
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.css
@@ -44,7 +44,7 @@ button{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
 }
 p{
     color: lightslategrey;
