--- a/src/app/shared/components/doc-profile/doc-profile.component.css
+++ b/src/app/shared/components/doc-profile/doc-profile.component.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position:top
+    object-position: center;
 }
 #linkedin-btn{
     background-color: #0a66c2;
