--- a/src/app/shared/components/doc-profile/doc-profile.component.html
+++ b/src/app/shared/components/doc-profile/doc-profile.component.html
@@ -8,7 +8,7 @@
   "
 >
   <div class="row justify-content-center">
-    <div class="col-lg-4 col-sm-8 p-3">
+    <div class="col-lg-4 col-sm-7 p-3">
       <div class="image-container">
         <img class="image-fluid" [src]="profileData.profile_photo" alt="" />
       </div>
@@ -98,23 +98,23 @@
                 <div class="col-lg-6 col-sm-12 p-2 mb-4">
                   <div class="d-flex align-items-center mb-2">
                     <fa-icon class="ps-3" [icon]="location"></fa-icon>
-                    <p class="ps-3 mb-0">
+                    <p class="ps-3 mb-0 text-break">
                       {{ consultData.address }} - {{ communeData.name }}.
                     </p>
                   </div>
                   <div class="d-flex align-items-center">
                     <fa-icon class="ps-3" [icon]="phone"></fa-icon>
-                    <p class="ps-3 mb-0">{{ consultData.phone }}</p>
+                    <p class="ps-3 mb-0 text-break">{{ consultData.phone }}</p>
                   </div>
                 </div>
-                <div class="col-6 p-2 mb-4">
+                <div class="col-lg-6 col-sm-12 p-2 mb-4">
                   <div class="d-flex align-items-center mb-2">
                     <fa-icon class="ps-3" [icon]="envelope"></fa-icon>
-                    <p class="ps-3 mb-0">{{ consultData.email }}</p>
+                    <p class="ps-3 mb-0 text-break">{{ consultData.email }}</p>
                   </div>
                   <div class="d-flex align-items-center">
                     <fa-icon class="ps-3" [icon]="whatsapp"></fa-icon>
-                    <p class="ps-3 mb-0">{{ consultData.whatsapp }}</p>
+                    <p class="ps-3 mb-0 text-break">{{ consultData.whatsapp }}</p>
                   </div>
                 </div>
               </div>
