cambios del front, arreglos funciones dañadas y otros

--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="p-3 text-center">
-    <a (click)="sendToProfileFunction(profile.user_id)"
+    <a (click)="sendToProfileFunction(profile)"
       ><button class="w-50 my-2">
         <fa-icon [icon]="plus" class="p-1"></fa-icon>INFO
       </button></a
