--- a/src/app/features/profile/views/profile.component.html
+++ b/src/app/features/profile/views/profile.component.html
@@ -13,4 +13,4 @@
     <h1>Bienvenido a MEDX!</h1>
   </div>
 </div> -->
-<app-doc-profile [userId]="userId"></app-doc-profile>
+<app-doc-profile [user_uuid]="user_uuid"></app-doc-profile>
