--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -29,17 +29,22 @@
       </div>
       <div class="d-flex justify-content-start stock-search-component-small">
         <div *ngIf="searchProfiles.length && show" class="stock-search-result">
-          <div *ngFor="let profile of searchProfiles" class="search-result-item">
+          <div
+            *ngFor="let profile of searchProfiles"
+            class="search-result-item"
+          >
             <div class="search-result-name w-100">
-              <strong (click)="showProfileFunction(profile.user_id)">{{ profile.first_name }} {{ profile.middle_name }}
-                {{ profile.last_name }} {{ profile.second_lastname }}</strong>
+              <strong (click)="showProfileFunction(profile)"
+                >{{ profile.first_name }} {{ profile.middle_name }}
+                {{ profile.last_name }} {{ profile.second_lastname }}</strong
+              >
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+
   <div class="row">
     <h5 class="mt-5">o selecciona una categoria:</h5>
     <fa-icon [icon]="arrowDown"></fa-icon>
