--- a/src/app/features/medical-center/views/medical-center.component.css
+++ b/src/app/features/medical-center/views/medical-center.component.css
@@ -1,39 +1,107 @@
-h3{
-    font-family: Helvetica;
-    letter-spacing: 2px;
-}
-h4{
-    font-family: Helvetica;
-    letter-spacing: 2px;
+/* div{
+    border: 1px solid aquamarine;
+} */
+.container{
+    height: auto;
 }
 h5{
-    font-family: Helvetica;
+    font-family: Arial, Helvetica, sans-serif;
+    color: gray;
+    font-weight: 700;
+    letter-spacing: 3px;
+    font-size: 2rem;
 }
-p{
-    font-family: "Titulos";
-    color: rgba(0, 168, 120, 1);
+h4{
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--black);
+    font-weight: 700;
+    letter-spacing: 3px;
+    font-size: 2.5rem;
 }
-label{
-    font-family: "TItulos";
-    letter-spacing: 0.5px;
-    font-size: 1.2rem;
+fa-icon{
+    font-size: 30px;
+    color: var(--lightblue);
+}
+#icon-text{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    margin: 0px;
+}
+#img-container{
+    max-width: 450px;
+    height: auto;
+}
+#img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 10px;
+}
+#logo-container{
+    max-width: 7rem;
+    height: fit-content;
+}
+#logo-container img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 button{
-    background-color: rgba(0, 168, 120, .8);
-    color: white;
-    font-family: Helvetica;
-    font-weight: 700;
-    font-size: .8rem;
-    letter-spacing: 1px;
-    border-radius: 20px;
-    padding: 10px 0px;
+    width: 120px;
+    padding: 5px 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--purple);
     transition: background-color .5s;
 }
 button:hover{
-    background-color: rgba(0, 168, 120, .5);;
+    background-color: var(--purpleO);
+}
+button p{
+    padding: 0px;
+    margin: 0px;
+    font-size: .8rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: white;
+}
+button fa-icon{
+    font-size: 1rem;
+    color: white;
 }
 
-.alert-error{
-    color: red;
+/* table style */
+#table-container{
+    max-width: 80%;
+}
+#photo-container{
+    max-width: 80px;
+    height: 80px;
+}
+#photo-container img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+table{
+    vertical-align: middle;
+}
+table p{
+    margin: 0px;
+    padding: 0px;
+}
+table a{
+    text-decoration: none;
+    color: black;
+    transition: color .3s;
+}
+table a:hover{
+    color: var(--purple);
+}
+#table-btn{
+    border-radius: 0px;    
 }
