--- a/src/app/features/medical-center/views/medical-center.component.css
+++ b/src/app/features/medical-center/views/medical-center.component.css
@@ -30,21 +30,21 @@ fa-icon{
 }
 #img-container{
     max-width: 450px;
-    height: auto;
+    height: 400px;
 }
 #img-container img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 10px;
 }
 #logo-container{
-    max-width: 7rem;
-    height: fit-content;
+    max-width: 150px;
+    height: 150px;
 }
 #logo-container img{
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: contain;
 }
 button{
@@ -64,8 +64,8 @@ button:hover{
 button p{
     padding: 0px;
     margin: 0px;
-    font-size: .8rem;
-    font-weight: 500;
+    font-size: .6rem;
+    font-weight: 700;
     letter-spacing: 1px;
     color: white;
 }
@@ -76,19 +76,20 @@ button fa-icon{
 
 /* table style */
 #table-container{
-    max-width: 80%;
+    max-width: 100%;
 }
 #photo-container{
-    max-width: 80px;
+    min-width: 80px;
     height: 80px;
 }
 #photo-container img{
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: contain;
 }
 table{
     vertical-align: middle;
+    width: 100%;
 }
 table p{
     margin: 0px;
@@ -104,4 +105,38 @@ table a:hover{
 }
 #table-btn{
     border-radius: 0px;    
+}
+#category a{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+#full-name p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 2.5px;
+}
+@media screen and (max-width:425px){
+    #icon-text{
+        font-size: .8rem;
+    }
+    fa-icon{
+        font-size: 20px;
+    }
+    h5{
+        font-size: 1.5rem;
+    }
+    h4{
+        font-size: 2rem;
+    }
+    p{
+        font-size: .8rem;
+    }
+    #full-name p{
+        letter-spacing: 1.8px;
+        font-size: .7rem;
+    }
+    table{
+     text-align: center;
+    }
 }
