--- a/src/app/features/medical-center/views/medical-center.component.html
+++ b/src/app/features/medical-center/views/medical-center.component.html
@@ -1,8 +1,8 @@
 <div class="container p-3" *ngIf="medicalCenterData !== undefined">
   <div class="row p-3 m-1 justify-content-center">
-    <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+    <div class="col-lg-5 col-md-12 col-sm-12 p-1">
       <div class="row justify-content-center">
-        <div class="col-10 d-flex justify-content-center">
+        <div class="col-12 d-flex justify-content-center">
           <div id="img-container">
             <img
               class="shadow-sm img-fluid"
@@ -16,14 +16,14 @@
             <fa-icon [icon]="shareIcon"></fa-icon>
           </button>
           <button class="mx-1 shadow-sm" (click)="sendWebUrl()">
-            <p>Sitio Web</p>
+            <p>SITIO WEB</p>
           </button>
         </div>
       </div>
     </div>
-    <div class="col-6 p-3 mb-3">
-      <div class="row justify-content-center">
-        <div class="col-10 d-flex justify-content-between">
+    <div class="col-lg-6 col-md-12 col-sm-12 p-3 mb-3 ms-2">
+      <div class="row justify-content-start">
+        <div class="col-12 d-flex justify-content-between">
           <div class="d-flex flex-column">
             <h5>{{ medicalCenterData.medical_center_type_name }}</h5>
             <h4>{{ medicalCenterData.name }}</h4>
@@ -45,8 +45,8 @@
               <p id="icon-text" class="mx-3">{{ medicalCenterData.url }}</p>
             </div>
           </div>
-          <div class="d-flex flex-column" id="logo-container">
-            <img src="{{ medicalCenterData.image_logo }}" alt="" />
+          <div class="d-flex flex-column flex-nowrap" id="logo-container">
+            <img src="{{ medicalCenterData.image_logo }}" class="flex-shrink-0" alt="" />
           </div>
         </div>
       </div>
@@ -57,13 +57,13 @@
   </div>
   <div class="row p-3 m-1 justify-content-center">
     <h5>Nuestro equipo:</h5>
-    <div id="table-container" class="mt-2">
+    <div id="table-container" class="mt-2 table-responsive">
       <table class="table">
         <tbody>
           <tr *ngFor="let person of medicalCenterPersons">
             <th>
               <div id="photo-container">
-                <img src="{{ person.profile_photo }}" alt="photo" />
+                <img src="{{ person.profile_photo }}" class="shadow-sm" alt="photo" />
               </div>
             </th>
             <td id="full-name">
@@ -73,7 +73,7 @@
               </p>
             </td>
             <td id="age">
-              <p>{{ calcularEdad(person.birth_date) }}</p>
+              <p>{{ calcularEdad(person.birth_date) + " años" }}</p>
             </td>
             <td id="category">
               <a href="">{{ person.degree_name }}</a>
