--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 html{
-    height: 100vh;
+    max-width: 100%;
+    height: auto;
 }
 body{
     min-height: 100vh;
