se arregla componente contacto se arreglan los tipos de letra agrega boton registro en navbar actualiza numero de contacto

--- a/src/app/features/about/views/about.component.html
+++ b/src/app/features/about/views/about.component.html
@@ -13,12 +13,16 @@
     <h3>
       Encuentra profesionales de salud de manera fácil y rápida con nuestra StartUp.
     </h3>
-    <div class="col-lg-6 col-sm-12 my-5 text-center">
+    <div class="col-lg-4 col-sm-8 d-flex flex-column align-self-start justify-content-center my-5 text-center">
       <div class="img-container">
-        <img src="assets/images/poster.svg" alt="" class="rounded shadow" />
+        <img src="assets/images/poster.svg" alt="" class="rounded" />
+      </div> 
+      <div class="mt-3">
+        <h5 class="p-3">Quieres saber mas?</h5>
+        <a href="assets/docs/Press. MedxApp 2023.pdf" id="link-download" class="shadow-sm" descargar>Click Aqui!</a>      
       </div>
     </div>
-    <div class="col-lg-6 col-sm-12 my-5">
+    <div class="col-lg-7 col-sm-12 my-5">
       <div>
         <p align="justify" class="lh-lg">
           En la era digital actual, encontrar profesionales de salud competentes y confiables puede resultar un desafío
