--- a/src/app/features/contact/views/contact.component.html
+++ b/src/app/features/contact/views/contact.component.html
@@ -19,13 +19,13 @@
       </h4>
       <div class="d-flex flex-column mt-4">
         <h5 class="m-0">Registro</h5>
-        <p class="m-0 mt-2 text-break">+56 9 4850 5395</p>
+        <p class="m-0 mt-2 text-break"><a href="tel:+56942615877">+56 9 4261 5877</a></p>
         <p class="m-0 mt-1 text-break">registro@medxapp.cl</p>
         <p class="m-0 mt-1 text-break">Lunes a Viernes 09:00 - 18:00</p>
       </div>
       <div class="d-flex flex-column mt-4">
         <h5 class="m-0">Administración</h5>
-        <p class="m-0 mt-2 text-break">+56 9 4850 5395</p>
+        <p class="m-0 mt-2 text-break"><a href="tel:+56942615877">+56 9 4261 5877</a></p>
         <p class="m-0 mt-1 text-break">administracion@medxapp.cl</p>
         <p class="m-0 mt-1 text-break">Lunes a Viernes 09:00 - 18:00</p>
       </div>
@@ -88,8 +88,8 @@
               formControlName="message"
             ></textarea>
           </div>
-          <div class="text-center mt-4">
-            <button type="submit" class="w-50 shadow">ENVIAR</button>
+          <div class="text-left mt-4">
+            <button type="submit" class="w-25 shadow">ENVIAR</button>
           </div>
         </div>
       </form>
