--- a/src/app/features/about/views/about.component.css
+++ b/src/app/features/about/views/about.component.css
@@ -2,13 +2,13 @@
     border: 1px solid aquamarine;
 } */
 .img-container{
-    width: auto;
-    height: auto;
+    width: fit-content;
+    height: 100%;
     margin: 0px;
 }
 .img-container img{
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: contain;
     border: none;
 }
@@ -27,4 +27,17 @@ p{
 }
 strong{
     color: var(--purple);
+}
+#link-download{
+    background-color: var(--blue);
+    padding: 10px 15px ;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: white;
+    transition: background-color .5s;
+}
+#link-download:hover{
+    background-color: var(--purple);
 }
