--- a/src/app/features/contact/views/contact.component.css
+++ b/src/app/features/contact/views/contact.component.css
@@ -2,10 +2,10 @@
     padding: 40px;
 }
 h1{
-    font-family: Titulos;
+    font-family: Arial, Helvetica, sans-serif;
 }
 h3{
-    font-family: Titulos;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
 }
 h4{
@@ -16,18 +16,28 @@ h5{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 p{
-    font-family: "Titulos";
+    font-family: Arial, Helvetica, sans-serif;
     color: var(--lightblue);
 }
+a{
+    text-decoration: none;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: var(--lightblue);
+    transition: color .2s;
+}
+a:hover{
+    color: var(--purple);
+}
 label{
-    font-family: Titulos;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.5px;
     font-size: 1.2rem;
 }
 button{
     background-color: var(--purple);
     color: white;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     font-size: .8rem;
     letter-spacing: 1px;
@@ -47,11 +57,11 @@ button:hover{
     padding: 40px;
 }
 #subtitle{
-    font-family: Titulos;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
     letter-spacing: 1px;
     font-size: 1.1rem;
-    font-weight: 700;
+    font-weight: 500;
 }
 @media (max-width: 576px) {
     #yellow-bg {
