--- a/src/app/features/home/components/hero/hero.component.css
+++ b/src/app/features/home/components/hero/hero.component.css
@@ -25,10 +25,10 @@ strong{
     color: grey;
 }
 h1{
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 1.5px;
     font-size: 3.4rem;
-    font-family: Titulos;
+    font-family: Arial, Helvetica, sans-serif;
     color: var(--blue)
 }
 h5{
